Styles in different files. Dark mode

--- a/BaseXamarin/BaseXamarin/App.xaml
+++ b/BaseXamarin/BaseXamarin/App.xaml
@@ -6,6 +6,6 @@
              mc:Ignorable="d"
              x:Class="BaseXamarin.App">
     <Application.Resources>
-
+        <ResourceDictionary Source="/Styles/LightTheme.xaml" />
     </Application.Resources>
 </Application>
