--- a/BaseXamarin/BaseXamarin/Features/Onboarding/OnboardingView.xaml
+++ b/BaseXamarin/BaseXamarin/Features/Onboarding/OnboardingView.xaml
@@ -5,8 +5,6 @@
                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                       x:Class="BaseXamarin.Features.OnboardingView"
                       x:TypeArguments="features:OnboardingViewModel">
-    <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-        <Button x:Name="BtnTest" Text="Read" TextColor="Red" Clicked="Button_Clicked"/>
-        <Label x:Name="LbValue" />
+    <StackLayout>
     </StackLayout>
 </base:BaseContentPage>
